--- a/parts/phpsupport/phpconfigwidgetbase.ui
+++ b/parts/phpsupport/phpconfigwidgetbase.ui
@@ -72,7 +72,7 @@
                         </property>
                         <property stdset="1">
                             <name>title</name>
-                            <string>Invocation mode</string>
+                            <string>Invocation Mode</string>
                         </property>
                         <grid>
                             <property stdset="1">
@@ -332,7 +332,7 @@ was compiled with PHP support.</string>
                 </property>
                 <attribute>
                     <name>title</name>
-                    <string>shell</string>
+                    <string>Shell</string>
                 </attribute>
                 <grid>
                     <property stdset="1">
@@ -450,7 +450,7 @@ was compiled with PHP support.</string>
                                 </property>
                                 <property stdset="1">
                                     <name>text</name>
-                                    <string>use 'php.ini' file in this directory:</string>
+                                    <string>Use 'php.ini' file in this directory:</string>
                                 </property>
                             </widget>
                             <widget row="3"  column="1" >
